<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElegirTipoTrabajadorActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/txvMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSelect"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/rgEleccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvMensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.10">

        <RadioButton
            android:id="@+id/rgTH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTH"/>

        <RadioButton
            android:id="@+id/rgTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTC"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgEleccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.924"/>

</androidx.constraintlayout.widget.ConstraintLayout>