<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/txvAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_misDatos"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txvDesarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_desarrollador"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAcercaDe"
        app:layout_constraintVertical_bias="0.20"/>

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_nombre"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.30"
        app:layout_constraintTop_toBottomOf="@+id/txvDesarrollador"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txvCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_cod"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txvCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_codigo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>